<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_pantalla"
    tools:context="com.fixtter.sgtel.fixtter_user_android.Interfaces.Activity_Login">
    <android.support.design.widget.AppBarLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/signin_tipo_crearusuario"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/fixtterlogo"
        android:layout_height="80dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity= "center"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="@string/login_desc"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButton"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:com_facebook_login_text="@string/signin_btnfacebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_o"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_border_edittext"
            android:gravity="center"
            android:hint="@string/crearusuario_correo"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_border_edittext"
            android:gravity="center"
            android:hint="@string/crearusuario_contraseña"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_correo"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/singin_btnemail"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/login_olvido"/>


    </LinearLayout>
</LinearLayout>
