<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.fixtter.sgtel.fixtter_user_android.Interfaces.Inicio">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/inicio_bienvenido"
            android:textSize="20dp" />

        <ImageView
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:src="@drawable/fixtterlogo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/inicio_iniciosesion"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/inicio_notienes"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btn_crearcuenta"
                android:drawableLeft="@drawable/ic_signin_24dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/inicio_nuevousuario"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_llamada"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:backgroundTint="@color/colorGreen"
                android:drawableLeft="@drawable/ic_phone_white_24dp"
                android:text="@string/inicio_llamar"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
