<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla"
    android:orientation="vertical"
    tools:context="com.fixtter.sgtel.fixtter_user_android.Interfaces.Activity_TipoCreacionUsuario">
    <android.support.design.widget.AppBarLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/signin_tipo_crearusuario"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/fixtterlogo"
        android:layout_height="130dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity= "center"
        android:textSize="15sp"
        android:text="@string/signin_crear_usuario"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btn_correo"
            android:text="@string/singin_btnemail"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorWhite" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButton"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:com_facebook_login_text="@string/signin_btnfacebook"/>

    </LinearLayout>

</LinearLayout>
