<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fixtter.sgtel.fixtter_user_android.Interfaces.Navegacion_Principal">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent">

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@drawable/fondo_pantalla"
        android:orientation="vertical"

        android:layout_height="match_parent">
        <ImageView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/fixtterlogo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nav_detalle"
            android:gravity="center"/>
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/Nav_solicitar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:text="@string/Nav_mispedidos"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_phone_white_48dp" />

</android.support.design.widget.CoordinatorLayout>
